// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home render DynaImage 1`] = `
<Fragment>
  <Loading
    className="className"
    isLoading={false}
  >
    <div
      key="{\\"className\\":\\"className\\",\\"src\\":\\"https://www.example.com/eifel.jpg\\",\\"mode\\":\\"FILL\\",\\"alt\\":\\"Profile photo\\"}"
      style={
        Object {
          "backgroundImage": "url(https://www.example.com/eifel.jpg)",
          "backgroundSize": "cover",
          "filter": undefined,
          "transform": "",
        }
      }
    />
  </Loading>
  <img
    alt="Profile photo"
    hidden={true}
    onError={[Function]}
    onLoad={[Function]}
    src="https://www.example.com/eifel.jpg"
  />
</Fragment>
`;

exports[`Home render DynaResponsiveImage 1`] = `
<div
  className="className"
  style={
    Object {
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <picture>
    <img
      alt="Profile photo"
      onError={[Function]}
      onLoad={[Function]}
      src="https://www.example.com/eifel.jpg"
      style={
        Object {
          "filter": undefined,
          "transform": "",
          "transformOrigin": undefined,
        }
      }
      width="100%"
    />
  </picture>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</div>
`;

exports[`Home rendered with minimum set of props 1`] = `
<Fragment>
  <Loading
    className=""
    isLoading={false}
  >
    <div
      key="{\\"src\\":\\"https://www.example.com/eifel.jpg\\"}"
      style={
        Object {
          "backgroundImage": "url(https://www.example.com/eifel.jpg)",
          "backgroundSize": "contain",
          "filter": undefined,
          "transform": "",
        }
      }
    />
  </Loading>
  <img
    hidden={true}
    onError={[Function]}
    onLoad={[Function]}
    src="https://www.example.com/eifel.jpg"
  />
</Fragment>
`;
